[package]
name = "link-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
futures = "0.3.30"
